@@ -24,6 +24,18 @@ or character data nested into the element.</p>
     <td valign="top">A message giving further information on why the build exited</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">if</td>
+    <td valign="top">Only fail if a property of the given name exists
+      in the current project</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
+    <td valign="top">unless</td>
+    <td valign="top">Only fail if a property of the given name doesn't
+      exist in the current project</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>  &lt;fail/&gt;</pre>
